v1.2.4 Redis